migration-result/ver/16.x/access-controls/access-request-plugins/ssh-approval-mattermost.mdx
---
title: Run the Mattermost Access Request plugin
description: How to set up Teleport's Mattermost plugin for privilege elevation approvals.
version: '16.x'
---

This guide explains how to integrate Teleport access requests with Mattermost, an open
source messaging platform. The Teleport Mattermost plugin notifies individuals of
access requests. Users can then approve and deny access requests by following the
message link, making it easier to implement security best practices without
compromising productivity.

![The Mattermost Access Request plugin](../../../../../assets/diagram-b0b077f65b.png)

<Accordion title="This integration is hosted on Teleport Cloud">
  In Teleport Team and Teleport Enterprise Cloud, Teleport manages the Mattermost integration for
  you, and you can enroll the Mattermost integration from the Teleport Web UI.

  Visit the Teleport Web UI and find the dropdown menu on the upper left of the
  screen. Select the **Management** option.

  On the left sidebar, click **Enroll New Integration** to visit the "Enroll New
  Integration" page:

  ![Enroll an Access Request plugin](../../../../../assets/enroll-7cf5756f5a.png)

  On the "Select Integration Type" menu, click the tile for your integration. You
  will see a page with instructions to set up the integration, as well as a form
  that you can use to configure the integration.
</Accordion>

## Prerequisites

- Access to an Enterprise edition of Teleport running in your environment.

  For information about the differences between Teleport editions, see [Comparing
  editions](/ver/16.x/choose-an-edition/introduction#comparing-editions).

- The Enterprise `tctl` admin tool and `tsh` client tool version >= 15.0.0-dev.

  You can verify the tools you have installed by running the following commands:

  ```code
  $ tctl version
  # Teleport Enterprise v15.0.0-dev go1.21

  $ tsh version
  # Teleport v15.0.0-dev go1.21
  ```

  You can download these tools by following the appropriate [Installation
  instructions](/ver/16.x/installation#installation-instructions) for your environment and Teleport edition.

**Recommended:** Configure Machine ID to provide short-lived Teleport
credentials to the plugin. Before following this guide, follow a Machine ID
[deployment guide](/ver/16.x/machine-id/deployment) to run the `tbot` binary on
your infrastructure.

- A Mattermost account with admin privileges. This plugin has been tested with
  Mattermost v7.0.1.
- Either a Linux host or Kubernetes cluster where you will run the Teleport Mattermost plugin.
- To check that you can connect to your Teleport cluster, sign in with `tsh login`, then
  verify that you can run `tctl` commands using your current credentials.
  `tctl` is supported on macOS and Linux machines.

  For example:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  15.0.0-dev
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  If you can connect to the cluster and run the `tctl status` command, you can use your
  current credentials to run subsequent `tctl` commands from your workstation.
  If you host your own Teleport cluster, you can also run `tctl` commands on the computer that
  hosts the Teleport Auth Service for full permissions.

## Step 1/8. Define RBAC resources

Before you set up the Teleport Mattermost plugin, you need to enable Role Access
Requests in the Teleport Proxy Service or Teleport Auth Service.

For the purpose of this guide, we will define an `editor-requester` role, which
can request the built-in `editor` role, and an `editor-reviewer` role that can
review requests for the `editor` role.

Create a file called `editor-request-rbac.yaml` with the following content:

```yaml
kind: role
version: v5
metadata:
  name: editor-reviewer
spec:
  allow:
    review_requests:
      roles: ['editor']
---
kind: role
version: v5
metadata:
  name: editor-requester
spec:
  allow:
    request:
      roles: ['editor']
      thresholds:
        - approve: 1
          deny: 1
```

Create the roles you defined:

```code
$ tctl create -f editor-request-rbac.yaml
role 'editor-reviewer' has been created
role 'editor-requester' has been created
```

Allow yourself to review requests by users with the `editor-requester` role by
assigning yourself the `editor-reviewer` role.

Assign the `editor-reviewer` role to your Teleport user by running the appropriate
commands for your authentication provider:

<Tabs>
  <Tab title="Local User">
    1. Retrieve your local user's configuration resource:

       ```code
       $ tctl get users/$(tsh status -f json | jq -r '.active.username') > out.yaml
       ```

    2. Edit `out.yaml`, adding `editor-reviewer` to the list of existing roles:

       ```diff
         roles:
          - access
          - auditor
          - editor
       +  - editor-reviewer 
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f out.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="GitHub">
    1. Retrieve your `github` authentication connector:

       ```code
       $ tctl get github/github --with-secrets > github.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `github.yaml` file. Because this key contains a sensitive value, you should remove the
       github.yaml file immediately after updating the resource.

    2. Edit `github.yaml`, adding `editor-reviewer` to the `teams_to_roles` section.

       The team you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the team must include your user account and
       should be the smallest team possible within your organization.

       Here is an example:

       ```diff
         teams_to_roles:
           - organization: octocats
             team: admins
             roles:
               - access
       +       - editor-reviewer
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f github.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="SAML">
    1. Retrieve your `saml`  configuration resource:

       ```code
       $ tctl get --with-secrets saml/mysaml > saml.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `saml.yaml` file. Because this key contains a sensitive value, you should remove the
       saml.yaml file immediately after updating the resource.

    2. Edit `saml.yaml`, adding `editor-reviewer` to the `attributes_to_roles` section.

       The attribute you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the group must include your
       user account and should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         attributes_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - editor-reviewer
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f saml.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="OIDC">
    1. Retrieve your `oidc`  configuration resource:

       ```code
       $ tctl get oidc/myoidc --with-secrets > oidc.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `oidc.yaml` file. Because this key contains a sensitive value, you should remove the
       oidc.yaml file immediately after updating the resource.

    2. Edit `oidc.yaml`, adding `editor-reviewer` to the `claims_to_roles` section.

       The claim you should map to this role depends on how you have designed your organization's
       role-based access controls (RBAC). However, the group must include your user account and
       should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         claims_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - editor-reviewer
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f oidc.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>
</Tabs>

Create a user called `myuser` who has the `editor-requester` role. This user
cannot edit your cluster configuration unless they request the `editor` role:

```code
$ tctl users add myuser --roles=editor-requester 
```

`tctl` will print an invitation URL to your terminal. Visit the URL and log in
as `myuser` for the first time, registering credentials as configured for your
Teleport cluster.

Later in this guide, you will have `myuser` request the `editor` role so you can
review the request using the Teleport plugin.

## Step 2/8. Install the Teleport Mattermost plugin

<Tabs>
  <Tab title="Self-Hosted">
    We recommend installing Teleport plugins on the same host as the Teleport Proxy
    Service. This is an ideal location as plugins have a low memory footprint, and
    require both public internet access and Teleport Auth Service access.
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    Install the Teleport Mattermost plugin on a host that can access both your
    Teleport Proxy Service and your Mattermost deployment.
  </Tab>
</Tabs>

<Tabs>
  <Tab title="Download">
    We currently only provide `linux-amd64` binaries. You can also compile these
    plugins from source. You can run the plugin from a remote host or your local
    development machine.

    ```code
    $ curl -L -O https://get.gravitational.com/teleport-access-mattermost-v13.3.7-linux-amd64-bin.tar.gz
    $ tar -xzf teleport-access-mattermost-v13.3.7-linux-amd64-bin.tar.gz
    $ cd teleport-access-mattermost
    $ sudo ./install
    ```

    Make sure the binary is installed:

    ```code
    $ teleport-mattermost version
    teleport-mattermost v13.3.7 git:teleport-mattermost-v13.3.7-fffffffff go1.21
    ```
  </Tab>

  <Tab title="Docker Image">
    We currently only provide Docker images for `linux-amd64`.
    Pull the Docker image for the latest access request plugin by running the following command:

    ```code
    $ docker pull public.ecr.aws/gravitational/teleport-plugin-mattermost:13.3.7
    ```

    Make sure the plugin is installed by running the following command:

    ```code
    $ docker run public.ecr.aws/gravitational/teleport-plugin-mattermost:13.3.7 version
    teleport-mattermost v13.3.7 git:teleport-mattermost-v13.3.7-api/14.0.0-gd1e081e 1.21
    ```

    For a list of available tags, visit [Amazon ECR Public Gallery](https://gallery.ecr.aws/gravitational/teleport-plugin-mattermost).
  </Tab>

  <Tab title="From Source">
    To install from source you need `git` and `go` installed. If you do not have Go
    installed, visit the Go [downloads page](https://go.dev/dl/).

    ```code
    $ git clone https://github.com/gravitational/teleport-plugins.git
    $ cd teleport-plugins/access/mattermost
    $ make
    ```

    Move the `teleport-mattermost` binary into your PATH.

    Make sure the binary is installed:

    ```code
    $ teleport-mattermost version
    teleport-mattermost v13.3.7 git:teleport-mattermost-v13.3.7-fffffffff go1.21
    ```
  </Tab>

  <Tab title="Helm Chart">
    {/*TODO: Replace this with the following partial once we fix
    gravitational/docs#299:
    docs/pages/kubernetes-access/helm/includes/helm-repo-add.mdx*/}

    Allow Helm to install charts that are hosted in the Teleport Helm repository:

    ```code
    $ helm repo add teleport https://charts.releases.teleport.dev
    ```

    Update the cache of charts from the remote repository:

    ```code
    $ helm repo update
    ```
  </Tab>
</Tabs>

## Step 3/8. Create a user and role for the plugin

Teleport's Access Request plugins authenticate to your Teleport cluster as a
user with permissions to list and read Access Requests. This way, plugins can
retrieve Access Requests from the Teleport Auth Service and present them to
reviewers.

Define a user and role called `access-plugin` by adding the following content to
a file called `access-plugin.yaml`:

```yaml
kind: role
version: v5
metadata:
  name: access-plugin
spec:
  allow:
    rules:
      - resources: ['access_request']
        verbs: ['list', 'read']
      - resources: ['access_plugin_data']
        verbs: ['update']
---
kind: user
metadata:
  name: access-plugin
spec:
  roles: ['access-plugin']
version: v2
```

Create the user and role:

```code
$ tctl create -f access-plugin.yaml
```

As with all Teleport users, the Teleport Auth Service authenticates the
`access-plugin` user by issuing short-lived TLS credentials. In this case, we
will need to request the credentials manually by *impersonating* the
`access-plugin` role and user.

If you are running a self-hosted Teleport Enterprise deployment and are using
`tctl` from the Auth Service host, you will already have impersonation
privileges.

To grant your user impersonation privileges for `access-plugin`, define a role
called `access-plugin-impersonator` by pasting the following YAML document into
a file called `access-plugin-impersonator.yaml`:

```yaml
kind: role
version: v5
metadata:
  name: access-plugin-impersonator
spec:
  allow:
    impersonate:
      roles:
      - access-plugin
      users:
      - access-plugin
```

Create the `access-plugin-impersonator` role:

```code
$ tctl create -f access-plugin-impersonator.yaml
```

If you are providing identity files to the plugin with Machine ID, assign the
`access-plugin` role to the Machine ID bot user. Otherwise, assign this role to
the user you plan to use to generate credentials for the `access-plugin` role
and user:

Assign the `access-plugin-impersonator` role to your Teleport user by running the appropriate
commands for your authentication provider:

<Tabs>
  <Tab title="Local User">
    1. Retrieve your local user's configuration resource:

       ```code
       $ tctl get users/$(tsh status -f json | jq -r '.active.username') > out.yaml
       ```

    2. Edit `out.yaml`, adding `access-plugin-impersonator` to the list of existing roles:

       ```diff
         roles:
          - access
          - auditor
          - editor
       +  - access-plugin-impersonator 
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f out.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="GitHub">
    1. Retrieve your `github` authentication connector:

       ```code
       $ tctl get github/github --with-secrets > github.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `github.yaml` file. Because this key contains a sensitive value, you should remove the
       github.yaml file immediately after updating the resource.

    2. Edit `github.yaml`, adding `access-plugin-impersonator` to the `teams_to_roles` section.

       The team you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the team must include your user account and
       should be the smallest team possible within your organization.

       Here is an example:

       ```diff
         teams_to_roles:
           - organization: octocats
             team: admins
             roles:
               - access
       +       - access-plugin-impersonator
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f github.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="SAML">
    1. Retrieve your `saml`  configuration resource:

       ```code
       $ tctl get --with-secrets saml/mysaml > saml.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `saml.yaml` file. Because this key contains a sensitive value, you should remove the
       saml.yaml file immediately after updating the resource.

    2. Edit `saml.yaml`, adding `access-plugin-impersonator` to the `attributes_to_roles` section.

       The attribute you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the group must include your
       user account and should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         attributes_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - access-plugin-impersonator
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f saml.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="OIDC">
    1. Retrieve your `oidc`  configuration resource:

       ```code
       $ tctl get oidc/myoidc --with-secrets > oidc.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `oidc.yaml` file. Because this key contains a sensitive value, you should remove the
       oidc.yaml file immediately after updating the resource.

    2. Edit `oidc.yaml`, adding `access-plugin-impersonator` to the `claims_to_roles` section.

       The claim you should map to this role depends on how you have designed your organization's
       role-based access controls (RBAC). However, the group must include your user account and
       should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         claims_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - access-plugin-impersonator
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f oidc.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>
</Tabs>

You will now be able to generate signed certificates for the `access-plugin`
role and user.

## Step 4/8. Export the access plugin identity

Give the plugin access to a Teleport identity file. We recommend using Machine
ID for this in order to produce short-lived identity files that are less
dangerous if exfiltrated, though in demo deployments, you can generate
longer-lived identity files with `tctl`:

<Tabs>
  <Tab title="Machine ID">
    Configure `tbot` with an output that will produce the credentials needed by
    the plugin. As the plugin will be accessing the Teleport API, the correct
    output type to use is `identity`.

    For this guide, the `directory` destination will be used. This will write these
    credentials to a specified directory on disk. Ensure that this directory can
    be written to by the Linux user that `tbot` runs as, and that it can be read by
    the Linux user that the plugin will run as.

    Modify your `tbot` configuration to add an `identity` output.

    If running `tbot` on a Linux server, use the `directory` output to write
    identity files to the `/opt/machine-id` directory:

    ```yaml
    outputs:
    - type: identity
      destination:
        type: directory
        # For this guide, /opt/machine-id is used as the destination directory.
        # You may wish to customize this. Multiple outputs cannot share the same
        # destination.
        path: /opt/machine-id
    ```

    If running `tbot` on Kubernetes, write the identity file to Kubernetes secret
    instead:

    ```yaml
    outputs:
      - type: identity
        destination:
          type: kubernetes_secret
          name: teleport-plugin-mattermost-identity
    ```

    If operating `tbot` as a background service, restart it. If running `tbot` in
    one-shot mode, execute it now.

    You should now see an `identity` file under `/opt/machine-id` or a Kubernetes
    secret named `teleport-plugin-mattermost-identity`. This contains the private key and signed
    certificates needed by the plugin to authenticate with the Teleport Auth
    Service.
  </Tab>

  <Tab title="Long-lived identity files">
    Like all Teleport users, `access-plugin` needs signed credentials in order to
    connect to your Teleport cluster. You will use the `tctl auth sign` command to
    request these credentials.

    The following `tctl auth sign` command impersonates the `access-plugin` user,
    generates signed credentials, and writes an identity file to the local
    directory:

    ```code
    $ tctl auth sign --user=access-plugin --out=identity
    ```

    The plugin connects to the Teleport Auth Service's gRPC endpoint over TLS.

    The identity file, `identity`, includes both TLS and SSH credentials. The
    plugin uses the SSH credentials to connect to the Proxy Service, which
    establishes a reverse tunnel connection to the Auth Service. The plugin
    uses this reverse tunnel, along with your TLS credentials, to connect to the
    Auth Service's gRPC endpoint.

    <Accordion title="Certificate Lifetime">
      By default, `tctl auth sign` produces certificates with a relatively short
      lifetime. For production deployments, we suggest using [Machine
      ID](/ver/16.x/machine-id/introduction) to programmatically issue and renew
      certificates for your plugin. See our Machine ID [getting started
      guide](/ver/16.x/machine-id/getting-started) to learn more.

      Note that you cannot issue certificates that are valid longer than your existing credentials.
      For example, to issue certificates with a 1000-hour TTL, you must be logged in with a session that is
      valid for at least 1000 hours. This means your user must have a role allowing
      a `max_session_ttl` of at least 1000 hours (60000 minutes), and you must specify a `--ttl`
      when logging in:

      ```code
      $ tsh login --proxy=teleport.example.com --ttl=60060
      ```
    </Accordion>

    If you are running the plugin on a Linux server, create a data directory
    to hold certificate files for the plugin:

    ```code
    $ sudo mkdir -p /var/lib/teleport/api-credentials
    $ sudo mv identity /var/lib/teleport/plugins/api-credentials
    ```

    If you are running the plugin on Kubernetes, Create a Kubernetes secret
    that contains the Teleport identity file:

    ```code
    $ kubectl -n teleport create secret generic --from-file=identity teleport-plugin-mattermost-identity
    ```

    Once the Teleport credentials expire, you will need to renew them by running the
    `tctl auth sign` command again.
  </Tab>
</Tabs>

## Step 5/8. Register a Mattermost bot

Now that you have generated the credentials your plugin needs to connect to your
Teleport cluster, register your plugin with Mattermost so it can send Access
Request messages to your workspace.

In Mattermost, click the menu button in the upper left of the UI, then click
System Console → Integrations → Bot Accounts.

Set "Enable Bot Account Creation" to "true".

![Enable Mattermost bots](../../../../../assets/mattermost_admin_console_integrations_bot_accounts-515b883661.png)

This will allow you to create a new bot account for the Mattermost plugin.

Go back to your team. In the menu on the upper left of the UI, click
Integrations → Bot Accounts → Add Bot Account.

Set the "Username", "Display Name", and "Description" fields according to how
you would like the Mattermost plugin bot to appear in your workspace. Set "Role"
to "Member".

You can <a href="../../../../../assets/teleport_bot@2x-8b9736129a.png" download>download</a> our avatar to set as your Bot Icon.

Set "post:all" to "Enabled".

![Enable Mattermost Bots](../../../../../assets/mattermost_bot-50fdf5dc2b.png)

Click "Create Bot Account". We will use the resulting OAuth 2.0 token when we
configure the Mattermost plugin.

## Step 6/8. Configure the Mattermost plugin

At this point, you have generated credentials that the Mattermost plugin will use
to connect to Teleport and Mattermost. You will now configure the Mattermost
plugin to use these credentials and post messages in the right channels for your
workspace.

<Tabs>
  <Tab title="Executable or Docker">
    The Mattermost plugin uses a configuration file in TOML format. On the host where you
    will run the Mattermost plugin, generate a boilerplate configuration by running the
    following commands:

    ```code
    $ teleport-mattermost configure > teleport-mattermost.toml
    $ sudo mv teleport-mattermost.toml /etc
    ```
  </Tab>

  <Tab title="Helm Chart">
    The Mattermost Helm Chart uses a YAML values file to configure the plugin. On
    the host where you have Helm installed, create a file called
    `teleport-mattermost-helm.yaml` based on the following example:

    ```yaml
    teleport:
      # Teleport HTTPS Proxy web address, for Teleport Enterprise Cloud should be in the form "your-account.teleport.sh:443"
      address: "teleport.example.com:443"
      # Secret containing identity
      identitySecretName: teleport-plugin-mattermost-identity
      # Path within the secret containing the identity file.
      identitySecretPath: identity

    mattermost:
      url: https://mattermost.example.com/  # URL of the Mattermost instance
      token: mattermosttoken                # Mattermost token of the bot
      recipients:
        - "access-requests@example.com"     # User
        - "team/example-channel"            # Channel

    log:
      output: "stderr" # Logger output. Could be "stdout", "stderr" or "/var/lib/teleport/mattermost.log"
      severity: "INFO" # Logger severity. Could be "INFO", "ERROR", "DEBUG" or "WARN".

    ```
  </Tab>
</Tabs>

Edit the configuration as explained below:

### `[teleport]`

<Tabs>
  <Tab title="Executable or Docker">
    **`addr`**: Include the hostname and HTTPS port of your Teleport Proxy Service
    or Teleport Enterprise Cloud tenant (e.g., `teleport.example.com:443` or
    `mytenant.teleport.sh:443`).

    **`identity`**: Fill this in with the path to the identity file you exported
    earlier.

    **`client_key`**, **`client_crt`**, **`root_cas`**: Comment these out, since we
    are not using them in this configuration.
  </Tab>

  <Tab title="Helm Chart">
    **`address`**: Include the hostname and HTTPS port of your Teleport Proxy Service
    or Teleport Enterprise Cloud tenant (e.g., `teleport.example.com:443` or
    `mytenant.teleport.sh:443`).

    **`identitySecretName`**: Fill in the `identitySecretName` field with the name
    of the Kubernetes secret you created earlier.

    **`identitySecretPath`**: Fill in the `identitySecretPath` field with the path
    of the identity file within the Kubernetes secret. If you have followed the
    instructions above, this will be `identity`.
  </Tab>
</Tabs>

If you are providing credentials to the plugin using a `tbot` binary that runs
on a Linux server, make sure the value of `identity` is the same as the path of
the identity file you configured `tbot` to generate, `/opt/machine-id/identity`.

Configure the plugin to periodically reload the identity file, ensuring that it
does not attempt to connect to the Teleport Auth Service with expired
credentials.

Add the following to the `teleport` section of the configuration:

```toml
refresh_identity = true
```

### `[mattermost]`

**`url`**: Include the scheme (`https://`) and fully qualified domain name of
your Mattermost deployment.

**`token`**: Find your Mattermost bot's OAuth 2.0 token. To do so, visit
Mattermost. In the menu on the upper left of the UI, go to Integrations → Bot
Accounts. Find the listing for the Teleport plugin and click "Create New Token".
After you save the token, you will see a message with text in the format,
"Access Token: TOKEN". Copy the token and paste it here.

**`recipients`**: This field configures the channels that the Mattermost plugin
will notify when it receives an Access Request message. The value is an array of
strings, where each element is either:

- The email address of a Mattermost user to notify via a direct message when the
  plugin receives an Access Request event
- A channel name in the format `team/channel`, where `/` separates the name
  of the team and the name of the channel

For example, this configuration will notify `first.last@example.com` and
the `Town Square` channel in the `myteam` team of any Access Request events:

<Tabs>
  <Tab title="Executable or Docker">
    ```toml
    recipients = [
      "myteam/Town Square",
      "first.last@example.com"
    ]
    ```
  </Tab>

  <Tab title="Helm Chart">
    ```yaml
    recipients:
      - "myteam/Town Square"
      - first.last@example.com
    ```
  </Tab>
</Tabs>

You will need to invite your Teleport plugin to any channel you add to the
`recipients` list (aside from direct message channels). Visit Mattermost,
navigate to each channel you want to invite the plugin to, and enter `/invite
@teleport` (or the name of the bot you configured) into the message box.

![Invite the bot](../../../../../assets/add-bot-4f73e38344.png)

<Accordion title="Suggested reviewers">
  Users can also suggest reviewers when they create an Access Request, e.g.,:

  ```code
  $ tsh request create --roles=dbadmin --reviewers=alice@example.com,ivan@example.com
  ```

  If an Access Request includes suggested reviewers, the Mattermost plugin will
  add these to the list of channels to notify. If a suggested reviewer is an email
  address, the plugin will look up the the direct message channel for that address
  and post a message in that channel.

  If `recipients` is empty, and the user requesting elevated privileges has not
  suggested any reviewers, the plugin will skip forwarding the Access Request to
  Mattermost.
</Accordion>

The final configuration should look similar to this:

<Tabs>
  <Tab title="Executable or Docker">
    ```yaml
    # example mattermost configuration TOML file
    [teleport]
    auth_server = "myinstance.teleport.sh:443"                   # Teleport Cloud proxy HTTPS address
    identity = "/var/lib/teleport/plugins/mattermost/identity"   # Identity file path
    refresh_identity = true                                      # Refresh identity file on a periodic basis

    [mattermost]
    url = "https://mattermost.example.com" # Mattermost Server URL
    token = "api-token"                    # Mattermost Bot OAuth token
    recipients = [
      "myteam/general",
      "first.last@example.com"
    ]

    [log]
    output = "stderr" # Logger output. Could be "stdout", "stderr" or "/var/lib/teleport/mattermost.log"
    severity = "INFO" # Logger severity. Could be "INFO", "ERROR", "DEBUG" or "WARN".

    ```
  </Tab>

  <Tab title="Helm Chart">
    ```yaml
    teleport:
      # Teleport HTTPS Proxy web address, for Teleport Enterprise Cloud should be in the form "your-account.teleport.sh:443"
      address: "teleport.example.com:443"
      # Secret containing identity
      identitySecretName: teleport-plugin-mattermost-identity
      # Path within the secret containing the identity file.
      identitySecretPath: identity

    mattermost:
      url: https://mattermost.example.com/  # URL of the Mattermost instance
      token: mattermosttoken                # Mattermost token of the bot
      recipients:
        - "access-requests@example.com"     # User
        - "team/example-channel"            # Channel

    log:
      output: "stderr" # Logger output. Could be "stdout", "stderr" or "/var/lib/teleport/mattermost.log"
      severity: "INFO" # Logger severity. Could be "INFO", "ERROR", "DEBUG" or "WARN".

    ```
  </Tab>
</Tabs>

## Step 7/8. Test your Mattermost bot

<Tabs>
  <Tab title="Executable">
    After modifying your configuration, run the bot with the following command:

    ```code
    $ teleport-mattermost start -d
    ```

    The `-d` flag provides debug information to make sure the bot can connect to
    Mattermost, e.g.:

    ```text
    DEBU   Checking Teleport server version mattermost/main.go:234
    DEBU   Starting a request watcher... mattermost/main.go:296
    DEBU   Starting Mattermost API health check... mattermost/main.go:186
    DEBU   Starting secure HTTPS server on :8081 utils/http.go:146
    DEBU   Watcher connected mattermost/main.go:260
    DEBU   Mattermost API health check finished ok mattermost/main.go:19
    ```
  </Tab>

  <Tab title="Docker">
    Run the plugin:

    ```bash
    $ docker run -v <path-to-config>:/etc/teleport-mattermost.toml public.ecr.aws/gravitational/teleport-plugin-mattermost:15.0.0-dev start
    ```
  </Tab>

  <Tab title="Helm Chart">
    After modifying your configuration, run the bot with the following command:

    ```code
    $ helm upgrade --install teleport-plugin-mattermost teleport/teleport-plugin-mattermost --values teleport-mattermost-helm.yaml
    ```

    To inspect the plugin's logs, use the following command:

    ```code
    $ kubectl logs deploy/teleport-plugin-mattermost
    ```

    Debug logs can be enabled by setting `log.severity` to `DEBUG` in
    `teleport-mattermost-helm.yaml` and executing the `helm upgrade ...` command
    above again. Then you can restart the plugin with the following command:

    ```code
    $ kubectl rollout restart deployment teleport-plugin-mattermost
    ```
  </Tab>
</Tabs>

### Create an Access Request

<Tabs>
  <Tab title="As an Admin">
    A Teleport admin can create an Access Request for another user with `tctl`:

    ```code
    $ tctl request create myuser --roles=editor
    ```
  </Tab>

  <Tab title="As a User">
    Users can use `tsh` to create an Access Request and log in with approved roles:

    ```code
    $ tsh request create --roles=editor
    Seeking request approval... (id: 8f77d2d1-2bbf-4031-a300-58926237a807)
    ```
  </Tab>

  <Tab title="From the Web UI">
    Users can request access using the Web UI by visiting the "Access Requests"
    tab and clicking "New Request":

    ![Creating an Access Request using the Web UI](../../../../../assets/request-access-989f648dce.png)
  </Tab>
</Tabs>

The users and channels you configured earlier to review the request should
receive a message from "Teleport" in Mattermost allowing them to visit a link in
the Teleport Web UI and either approve or deny the request.

### Resolve the request

Once you receive an Access Request message, click the link to visit Teleport and
approve or deny the request:

![Reviewing a request](../../../../../assets/review-request-a35de046df.png)

<Accordion title="Reviewing from the command line">
  You can also review an Access Request from the command line:

  <Tabs>
    <Tab title="As an Admin">
      ```code
      # Replace REQUEST_ID with the id of the request
      $ tctl request approve REQUEST_ID
      $ tctl request deny REQUEST_ID
      ```
    </Tab>

    <Tab title="As a User">
      ```code
      # Replace REQUEST_ID with the id of the request
      $ tsh request review --approve REQUEST_ID
      $ tsh request review --deny REQUEST_ID
      ```
    </Tab>
  </Tabs>
</Accordion>

<Note>
  When the Mattermost plugin posts an Access Request notification to a channel,
  anyone with access to the channel can view the notification and follow the link.
  While users must be authorized via their Teleport roles to review Access
  Requests, you should still check the Teleport audit log to ensure that the right
  users are reviewing the right requests.

  When auditing Access Request reviews, check for events with the type `Access
  Request Reviewed` in the Teleport Web UI.
</Note>

## Step 8/8. Set up systemd

This section is only relevant if you are running the Teleport Mattermost plugin
on a Linux host.

In production, we recommend starting the Teleport plugin daemon via an init
system like systemd. Here's the recommended Teleport plugin service unit file
for systemd:

```ini
[Unit]
Description=Teleport Mattermost Plugin
After=network.target

[Service]
Type=simple
Restart=on-failure
ExecStart=/usr/local/bin/teleport-mattermost start --config=/etc/teleport-mattermost.toml
ExecReload=/bin/kill -HUP $MAINPID
PIDFile=/run/teleport-mattermost.pid

[Install]
WantedBy=multi-user.target
```

Save this as `teleport-mattermost.service` in either `/usr/lib/systemd/system/` or
another [unit file load
path](https://www.freedesktop.org/software/systemd/man/systemd.unit.html#Unit%20File%20Load%20Path)
supported by systemd.

Enable and start the plugin:

```code
$ sudo systemctl enable teleport-mattermost
$ sudo systemctl start teleport-mattermost
```
